borsh-derive/src/internals/schema/structs/snapshots/generic_associated_type_param_override.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<V, T> borsh::BorshSchema for Parametrized<V, T>
where
    T: TraitName,
    V: borsh::BorshSchema,
    <T as TraitName>::Associated: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < V as borsh::BorshSchema > ::declaration(), < < T as TraitName >
            ::Associated as borsh::BorshSchema > ::declaration()
        ];
        format!(r#"{}::{}<{}>"#, std::module_path!(), "Parametrized", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::NamedFields(
            borsh::__private::maybestd::vec![
                ("field".to_string(), < < T as TraitName > ::Associated as
                borsh::BorshSchema > ::declaration()), ("another".to_string(), < V as
                borsh::BorshSchema > ::declaration())
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions
            .get(&<Self as borsh::BorshSchema>::declaration())
            .is_none();
        borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        );
        if no_recursion_flag {
            <<T as TraitName>::Associated as borsh::BorshSchema>::add_definitions_recursively(
                definitions,
            );
            <V as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}
