borsh-derive/src/internals/schema/structs/snapshots/generic_tuple_struct_borsh_skip2.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl<K, V, U> borsh::BorshSchema for G<K, V, U>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K as borsh::BorshSchema > ::declaration(), < V as borsh::BorshSchema >
            ::declaration()
        ];
        format!(r#"{}<{}>"#, "G", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < HashMap < K, V > as borsh::BorshSchema > ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions
            .get(&<Self as borsh::BorshSchema>::declaration())
            .is_none();
        borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        );
        if no_recursion_flag {
            <HashMap<
                K,
                V,
            > as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}
