borsh-derive/src/internals/schema/structs/snapshots/generic_tuple_struct_borsh_skip3.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<U, K, V> borsh::BorshSchema for G<U, K, V>
where
    U: borsh::BorshSchema,
    K: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < U as borsh::BorshSchema > ::declaration(), < K as borsh::BorshSchema >
            ::declaration()
        ];
        format!(r#"{}::{}<{}>"#, std::module_path!(), "G", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < U as borsh::BorshSchema > ::declaration(), < K as borsh::BorshSchema >
                ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions
            .get(&<Self as borsh::BorshSchema>::declaration())
            .is_none();
        borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        );
        if no_recursion_flag {
            <U as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <K as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}
