borsh-derive/src/internals/schema/structs/snapshots/tuple_struct_params.snap
---
source: borsh-derive/src/internals/schema/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V> borsh::BorshSchema for A<K, V>
where
    K: borsh::BorshSchema,
    V: borsh::BorshSchema,
{
    fn declaration() -> borsh::schema::Declaration {
        let params = borsh::__private::maybestd::vec![
            < K as borsh::BorshSchema > ::declaration(), < V as borsh::BorshSchema >
            ::declaration()
        ];
        format!(r#"{}<{}>"#, "A", params.join(", "))
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < K as borsh::BorshSchema > ::declaration(), < V as borsh::BorshSchema >
                ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        if borsh::schema::add_definition(
            <Self as borsh::BorshSchema>::declaration(),
            definition,
            definitions,
        ) {
            <K as borsh::BorshSchema>::add_definitions_recursively(definitions);
            <V as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

